[package]
name = "bipack_ru"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
description = "binary size-effective format used in Divan smart contracts, wasm bindings, network protocols, etc."
homepage = "https://gitea.sergeych.net/Divan/bipack_ru"
repository = "https://gitea.sergeych.net/Divan/bipack_ru"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
base64 = "0.21.4"
hex = "0.4.3"